4. add set Home Product task